@@ -1,0 +1,6 @@
+WARNING: issue-117.pdf: file is damaged
+WARNING: issue-117.pdf: can't find startxref
+WARNING: issue-117.pdf: Attempting to reconstruct cross-reference table
+WARNING: issue-117.pdf (file position 66): loop detected resolving object 2 0
+WARNING: issue-117.pdf (object 2 0, file position 67): attempting to recover stream length
+attempt to make a stream into a direct object
