@@ -1,5 +1,9 @@
 2017-07-26  Jay Berkenbilt  <ejb@ql.org>
 
+	* Fixes to infinite loops below also fix problems reported in
+	other issues and cover CVE-2017-11624, CVE-2017-11625,
+	CVE-2017-11626, and CVE-2017-11627.
+
 	* Don't attempt to interpret syntactic keywords (like R and
 	endobj) found while parsing content streams.
 
